--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'entypo';
-  src:  url('fonts/entypo.eot?cbzo39');
-  src:  url('fonts/entypo.eot?cbzo39#iefix') format('embedded-opentype'),
-    url('fonts/entypo.ttf?cbzo39') format('truetype'),
-    url('fonts/entypo.woff?cbzo39') format('woff'),
-    url('fonts/entypo.svg?cbzo39#entypo') format('svg');
+  src:  url('../fonts/entypo.eot?cbzo39');
+  src:  url('../fonts/entypo.eot?cbzo39#iefix') format('embedded-opentype'),
+    url('../fonts/entypo.ttf?cbzo39') format('truetype'),
+    url('../fonts/entypo.woff?cbzo39') format('woff'),
+    url('../fonts/entypo.svg?cbzo39#entypo') format('svg');
   font-weight: normal;
   font-style: normal;
 }
